# tpl

./: .editorconfig  .gitignore  README.md  install.ps1  install.sh  pyproject.toml  tasks.py  tpl  tpl.py  tpl_core.py  update.ps1
dev/: cmd.py  helpers.py
scripts/: build.py  update_dependencies.py
scripts/install/: install_custom.sh
src/: cli.py  main.py
src/cli_selector/: file.py
src/core/: commands.py  config_manager.py  file_manager.py  git_manager.py  plugin_loader.py  plugin_manager.py  spawn_manager.py  template_config.py  utils.py
src/file_index/central/: base.json
src/plugins/: eslint_config.py
src/repositories/: main.py
src/templates/poetry/: new.py
src/templates/poetry/script/: index.sh
src/templates/python_project/: main.py.cli  template_config.yaml  test_main.py
src/templates/vscode/: settings.json
src/types/: repo_struct.py  struct.py
src/utils/: command_utils.py  helpers.py  logging_config.py  plugin_utils.py
templates/poetry/: cookiecutter.json
templates/poetry/script/: index.sh
templates/poetry/{{cookiecutter.project_slug}}/: README.md  pyproject.toml
tests/: 0_test_file_spawn.py  1_test_template_poetry.py  2_test_package_eslint.py  main.py  test_cli_commands.py  test_commands.py  test_sample.py
